[gd_scene load_steps=65 format=2]

[ext_resource path="res://Scenes/GUI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/resume-select.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/new/menu-blank.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/new/play.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/new/play-select.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/new/credits.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/new/credits-select.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/new/quit.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/new/quit-select.png" type="Texture" id=9]
[ext_resource path="res://Assets/credit-page.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-34.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-35.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-32.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-33.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-36.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-37.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-38.png" type="Texture" id=17]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-28.png" type="Texture" id=18]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-30.png" type="Texture" id=19]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-31.png" type="Texture" id=20]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-20.png" type="Texture" id=21]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-21.png" type="Texture" id=22]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-23.png" type="Texture" id=23]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-22.png" type="Texture" id=24]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-24.png" type="Texture" id=25]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-25.png" type="Texture" id=26]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-27.png" type="Texture" id=27]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-29.png" type="Texture" id=28]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-26.png" type="Texture" id=29]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-39.png" type="Texture" id=30]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-41.png" type="Texture" id=31]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-42.png" type="Texture" id=32]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-43.png" type="Texture" id=33]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-44.png" type="Texture" id=34]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-40.png" type="Texture" id=35]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-45.png" type="Texture" id=36]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-3.png" type="Texture" id=37]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-6.png" type="Texture" id=38]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-11.png" type="Texture" id=39]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-12.png" type="Texture" id=40]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-13.png" type="Texture" id=41]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-9.png" type="Texture" id=42]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-1.png" type="Texture" id=43]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-2.png" type="Texture" id=44]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-4.png" type="Texture" id=45]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-5.png" type="Texture" id=46]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-7.png" type="Texture" id=47]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-10.png" type="Texture" id=48]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-8.png" type="Texture" id=49]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-14.png" type="Texture" id=50]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-15.png" type="Texture" id=51]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-16.png" type="Texture" id=52]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-19.png" type="Texture" id=53]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-17.png" type="Texture" id=54]
[ext_resource path="res://Assets/Menü Hintergrund/Hauptmenü_Animation_IA-18.png" type="Texture" id=55]
[ext_resource path="res://Assets/Sound/Music.mp3" type="AudioStream" id=56]
[ext_resource path="res://Assets/Menu/new/volume.png" type="Texture" id=57]
[ext_resource path="res://Assets/Menu/new/volume-line.png" type="Texture" id=58]
[ext_resource path="res://Assets/Menu/new/volume-select.png" type="Texture" id=59]
[ext_resource path="res://Assets/resume.png" type="Texture" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 37 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 42 ), ExtResource( 48 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 58 )
region_rect = Rect2( 0, 0, 935, 131 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AnimatedAnimated" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
frames = SubResource( 1 )
frame = 28
playing = true

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_right = 2480.0
margin_bottom = 3508.0
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 319.0
margin_top = 443.0
margin_right = 811.0
margin_bottom = 605.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 254.0
margin_top = 527.0
margin_right = 1101.0
margin_bottom = 695.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 308.0
margin_top = 618.0
margin_right = 825.0
margin_bottom = 835.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 166.0
margin_top = 755.0
margin_right = 1147.0
margin_bottom = 1083.0
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/grabber_highlight = ExtResource( 59 )
custom_icons/grabber = ExtResource( 57 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -80.0
max_value = 0.0
value = -35.0

[node name="CreditScreen" type="TextureRect" parent="."]
visible = false
margin_left = 1028.0
margin_top = -81.0
margin_right = 3508.0
margin_bottom = 3427.0
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 10 )

[node name="BackButton" type="TextureButton" parent="CreditScreen"]
margin_left = 2105.71
margin_top = 651.429
margin_right = 2170.71
margin_bottom = 715.429
rect_scale = Vector2( 2, 2 )

[node name="MenuBackButton" type="TextureButton" parent="."]
visible = false
margin_left = 221.0
margin_top = 312.0
margin_right = 1020.0
margin_bottom = 482.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 60 )
texture_pressed = ExtResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 56 )
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="CreditScreen/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MenuBackButton" to="." method="_on_MenuBackButton_pressed"]
